--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -43,10 +43,10 @@ i {
 .nav_list {
 	opacity: 0;
 	position: fixed;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
+	left: 0px;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
 	transition: 0.4s ease-in-out;
 	transform: translateX(-1000px);
 	background-color: var(--color-white);
@@ -54,6 +54,8 @@ i {
 .see_menu {
 	transform: translateX(0px);
 	opacity: 1;
+	width: 100vw;
+	height: 100vh;
 }
 .icon_btn_menu_close {
 	position: absolute;
@@ -140,7 +142,7 @@ i {
 	bottom: 0;
 	width: 100%;
 	cursor: pointer;
-	background-color: rgba(242, 141, 141, 0.48);
+	background-color:var(--color-text-titles);
 	padding: 10px;
 	color: var(--color-white);
 	font-size: 18px;
