--- a/src/components/mainCategories/MainCategories.css
+++ b/src/components/mainCategories/MainCategories.css
@@ -14,11 +14,58 @@
 	box-shadow: var(--box-shadow-black-blur);
 	height:100%;
 	object-fit: cover;
+	transition: .4s ease-out;
 	border-radius: var(--border-radius-box);
+}
+.container_see_more_categorie{
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	position: absolute;
+	left: 0px;
+	bottom: -1000px;
+	z-index: 2;
+	transition: .4s ease;
+	pointer-events: none;
+	border-radius: var(--border-radius-box);
+	background-color: rgba(233, 107, 141, 0.355);
+}
+.btn_see_more_categorie{
+	background-color: var(--color-white);
+	padding: 5px 8px;
+	border-radius: var(--border-radius-box);
+	font-size: 14px;
+	cursor: pointer;
+}
+.btn_see_more_categorie{
+	transition: .5s;
+}
+.btn_see_more_categorie:hover{
+	box-shadow: var(--box-shadow-black-blur);
 }
 .slider_container_categorie{
 	height: 230px;
+	position: relative;
 	cursor: pointer;
+	overflow: hidden;
+}
+.slider_container_categorie:hover >.container_see_more_categorie{
+	bottom: 0px;
+	pointer-events: unset;
+}
+
+.item_slider_category_name{
+	position: absolute;
+	bottom: 10px;
+	z-index: 1;
+	right: 10px;
+	padding: 10px;
+	color: var(--color-text-title);
+	border-radius: var(--border-radius-box);
+	background-color: var(--color-white);
 }
 .slick-slide > div {
   margin: 0 10px;
