--- a/src/components/mainCategories/MainCategories.css
+++ b/src/components/mainCategories/MainCategories.css
@@ -28,7 +28,7 @@
 	left: 0px;
 	bottom: -1000px;
 	z-index: 2;
-	transition: .4s ease;
+	transition: .5s ease;
 	pointer-events: none;
 	border-radius: var(--border-radius-box);
 	background-color: rgba(233, 107, 141, 0.355);
@@ -36,6 +36,7 @@
 .btn_see_more_categorie{
 	background-color: var(--color-white);
 	padding: 5px 8px;
+	color: var(--color-text-title);
 	border-radius: var(--border-radius-box);
 	font-size: 14px;
 	cursor: pointer;
@@ -61,11 +62,12 @@
 	position: absolute;
 	bottom: 10px;
 	z-index: 1;
+	font-size: 28px;
 	right: 10px;
-	padding: 10px;
+	padding: 6px;
 	color: var(--color-text-title);
 	border-radius: var(--border-radius-box);
-	background-color: var(--color-white);
+	background-color: rgba(255, 255, 255, 0.77);
 }
 .slick-slide > div {
   margin: 0 10px;
