--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 	--font-size-title-secunday: 18px;
 	--font-size-button: 14px;
 	--font-size-text-paragraph: 13px;
+	--border-small:.2px solid rgba(0, 0, 0, 0.337);
 	--font-size-text-paragraph-small: 14px;
 	--color-white: #ffffff;
 	--color-icon: rgba(0, 0, 0, 0.732);
