collections recent , data in the component

--- a/src/components/happyClients/HappyClients.css
+++ b/src/components/happyClients/HappyClients.css
@@ -11,6 +11,7 @@
 }
 .slider_container_item_rating{
 	position: relative;
+	cursor: pointer;
 	border-radius: var(--border-radius-box);
 	overflow: hidden;
 
