--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@
 }
 
 :root {
+	--margin-top-section:70px;
 	--color-text-paragraph: rgba(0, 0, 0, 0.198);
 	--color-text-titles: #f1a0b5;
+	--bg-section-app: #f1a0b645;
 	--border-radius-box: 6px;
 	--border-radius-input: 6px;
 	--font-size-title-main: 18px;
