--- a/src/components/topUp/ToUp.css
+++ b/src/components/topUp/ToUp.css
@@ -8,6 +8,7 @@
 	display: flex;
 	transition: .6s;
 	align-items: center;
+	z-index: 10;
 	justify-content: center;
 	font-size: 30px;
 	color: var(--color-white);
