--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -16,6 +16,21 @@
 	align-items: center;
 	justify-content: space-between;
 }
+.amount_cart_products{
+	position: absolute;
+	top: -3px;
+	border-radius: 50%;
+	right: -5px;
+	font-size: 13px;
+	color: white;
+	width: 20px;
+	height: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1px;
+	background-color: black;
+}
 .nav_logo {
 	width: 120px;
 	cursor: pointer;
@@ -27,6 +42,7 @@
 .icon_menu {
 	font-size: var(--font-size-icon);
 	color: var(--color-icon);
+	position: relative;
 }
 i {
 	cursor: pointer;
