--- a/src/components/itemProductCart/ItemProductCart.css
+++ b/src/components/itemProductCart/ItemProductCart.css
@@ -1,22 +1,44 @@
-.img_product_cart{
-    width: 90px;
-    border-radius: var(--border-radius-box);
+.img_product_cart {
+	width: 90px;
+	border-radius: var(--border-radius-box);
 }
-.content_product_cart{
-    padding: 5px;
-    width: 100%;
-    display: flex;
-    gap: 25px;
-    align-items: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.267);
+
+.content_product_cart {
+	padding: 5px;
+	position: relative;
+	width: 100%;
+	display: flex;
+	gap: 15px;
+	align-items: center;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.267);
 }
-.text_item_cart{
-    font-size: 14px;
+.text_item_cart {
+	font-size: 14px;
 }
-.input_amount{
-    flex-basis: 10%;
-    border: 1px solid rgba(0, 0, 0, 0.445);
-    width: 60px;
-    border-radius: var(--border-radius-box);
-    padding: 3px;
+.section_bottom_item_cart {
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+.name_item_cart {
+	font-size: 13px;
+	margin-bottom: 6px;
+}
+.input_amount {
+	position: absolute;
+	border: 1px solid rgba(0, 0, 0, 0.445);
+	width: 50px;
+	margin-left: 50px;
+	border-radius: var(--border-radius-box);
+	left: 80px;
+	padding: 3px;
+}
+.icon_delete_item_cart {
+	font-size: 20px;
+	cursor: pointer;
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: var(--color-icon);
 }
