--- a/src/components/itemProductCart/ItemProductCart.css
+++ b/src/components/itemProductCart/ItemProductCart.css
@@ -1,5 +1,7 @@
 .img_product_cart {
 	width: 90px;
+	height: 90px;
+	object-fit: cover;
 	border-radius: var(--border-radius-box);
 }
 
@@ -9,7 +11,6 @@
 	width: 100%;
 	display: flex;
 	gap: 15px;
-	align-items: center;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.267);
 }
 .text_item_cart {
@@ -23,6 +24,7 @@
 .name_item_cart {
 	font-size: 13px;
 	margin-bottom: 6px;
+	width: 180px;
 }
 .input_amount {
 	position: absolute;
@@ -43,10 +45,7 @@
 	left: 150px;
 }
 .icon_controller{
-	font-size: 18px;
-	height: 10px;
-	width: 10px;
-	border-radius: 50%;
+	font-size: 16px;
 }
 
 .input_amount { -moz-appearance:textfield; }
@@ -54,8 +53,8 @@
 	font-size: 20px;
 	cursor: pointer;
 	position: absolute;
-	right: 10px;
-	top: 50%;
+	right: 5px;
+	top: 15px;
 	transform: translateY(-50%);
 	color: var(--color-icon);
 }
