--- a/src/components/itemProductCart/ItemProductCart.css
+++ b/src/components/itemProductCart/ItemProductCart.css
@@ -9,8 +9,9 @@
 	padding: 5px;
 	position: relative;
 	width: 100%;
+	/* height: 200px; */
 	display: flex;
-	overflow: hidden;
+	/* overflow: hidden; */
 	gap: 15px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.267);
 }
@@ -49,7 +50,7 @@
 	font-size: 16px;
 }
 
-.input_amount { -moz-appearance:textfield; }
+/* .input_amount { -moz-appearance:textfield; } */
 .icon_delete_item_cart {
 	font-size: 20px;
 	cursor: pointer;
