--- a/src/components/cartRight/CartRight.css
+++ b/src/components/cartRight/CartRight.css
@@ -9,6 +9,12 @@
 	padding: 15px;
 	transition: 0.5s ease-in-out;
 }
+.btn_cart_send{
+	width: 190px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .see_cart {
 	right: 0px;
 	transition: 0.5s ease-in-out;
@@ -54,6 +60,7 @@
 	color: var(--color-white);
 	font-size: 15px;
 	transition: 0.5s;
+	height: 40px;
 }
 .btn_cart:hover {
 	background-color: rgba(0, 0, 0, 0.685);
