--- a/src/components/cartRight/CartRight.css
+++ b/src/components/cartRight/CartRight.css
@@ -75,13 +75,14 @@
 }
 .list_products {
 	width: 100%;
-	max-height: 530px;
+	max-height: 70%;
 	overflow: auto;
+	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
-	padding-top: 15px;
+	padding: 10px 0px;
 	gap: 10px;
-	margin: 48px auto;
+	margin: 40px auto;
 }
 
 @media screen and (min-width: 777px) {
