--- a/src/components/cartRight/CartRight.css
+++ b/src/components/cartRight/CartRight.css
@@ -84,6 +84,28 @@
 	gap: 10px;
 	margin: 40px auto;
 }
+.text_cart_empty{
+	height: 70%;
+	padding: 10px 0px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+.text_cart_empty > button{
+	margin-top: 20px;
+	padding: 8px 10px;
+	cursor: pointer;
+	font-size: 15px;
+	background-color: rgba(0, 0, 0, 0.408);
+	color: var(--color-white);
+	border-radius: var(--border-radius-box);
+	transition: 0.5s;
+}
+.text_cart_empty > button:hover{
+	background-color: rgba(0, 0, 0, 0.685);
+}
 
 @media screen and (min-width: 777px) {
 	.container_cart_right{
