--- a/src/components/headerSection/HeaderSection.css
+++ b/src/components/headerSection/HeaderSection.css
@@ -4,12 +4,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 200px;
+	height: 250px;
 }
 .section_title{
 	color: var(--color-icon);
 	text-transform: uppercase;
 	position: relative;
+	font-size: 25px;
 }
 
 .content_section{
