--- a/src/components/tableCart/TableCart.css
+++ b/src/components/tableCart/TableCart.css
@@ -69,7 +69,7 @@ table > tbody > tr > td {
 .total_price_order > span{
 	margin-left: 30px;
 }
-.btn_cart_page {
+.btn_cart_page ,.btn_cart_page_add_much_p{
 	padding: 8px 20px;
 	border-radius: var(--border-radius-box);
 	cursor: pointer;
@@ -78,10 +78,27 @@ table > tbody > tr > td {
 	font-size: 15px;
 	transition: 0.5s;
 	height: 40px;
+}
+.btn_cart_page{
 	width: 190px;
+}
+.btn_cart_page_add_much_p{
+	width: 240px;
+	margin-top: 40px;
 }
 .btn_cart_page:hover {
 	background-color: rgba(0, 0, 0, 0.685);
+}
+.btn_cart_page_add_much_p:hover {
+	background-color: rgba(0, 0, 0, 0.685);
+}
+
+.input_amount_cart{
+	border: 1px solid rgba(0, 0, 0, 0.225);
+	width: 80px;
+	height: 50px;
+	padding: 5px;
+	border-radius: var(--border-radius-box);
 }
 
 @media only screen and (max-width: 768px) {
