--- a/src/components/modalSearch/ModalSearch.css
+++ b/src/components/modalSearch/ModalSearch.css
@@ -4,10 +4,10 @@
 	height: 100%;
 	top: -1000px;
 	background-color: var(--color-white);
-	transition: .5s all;
+	transition: 0.5s all;
 	box-shadow: var(--box-shadow-black-blur);
 }
-.see_modal_search{
+.see_modal_search {
 	top: 0px;
 }
 .modal_search_title {
@@ -45,16 +45,16 @@
 .input_search {
 	flex-basis: 90%;
 }
-.list_product_found{
+.list_product_found {
 	display: grid;
-  grid-template-columns: repeat(1,1fr);
-  gap: 20px;
+	grid-template-columns: repeat(1, 1fr);
+	gap: 20px;
 	width: var(--width-container);
 	max-height: 60%;
 	margin: 0 auto;
 	overflow: auto;
 }
-.item_list_product{
+.item_list_product {
 	display: flex;
 	gap: 10px;
 	padding: 10px;
@@ -62,28 +62,38 @@
 	color: var(--color-icon);
 	border-bottom: 1px solid var(--color-text-titles);
 }
-.info_item_product{
+.info_item_product {
 	font-size: 13px;
 }
-.info_item_product > p:last-child{
+.info_item_product > p:last-child {
 	margin-top: 10px;
 	font-weight: bold;
 }
-.img_product_item_list{
+.img_product_item_list {
 	width: 80px;
 	height: 80px;
 	border-radius: var(--border-radius-box);
 	object-fit: cover;
 }
-
-
+.not_found_products {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
+	justify-content: center;
+}
+.not_found_products > h3{
+	color: var(--color-icon);
+}
+.not_found_products > img {
+	width: 300px;
+}
 
 @media screen and (min-width: 768px) {
-	.list_product_found{
-		grid-template-columns: repeat(3,1fr);
+	.list_product_found {
+		grid-template-columns: repeat(3, 1fr);
 		gap: 10px;
 	}
-
 }
 
 @media screen and (min-width: 800px) {
@@ -102,8 +112,8 @@
 	}
 }
 @media screen and (min-width: 1200px) {
-	.list_product_found{
-		grid-template-columns: repeat(4,1fr);
+	.list_product_found {
+		grid-template-columns: repeat(4, 1fr);
 		gap: 15px;
 	}
 }
