--- a/src/components/happyClients/HappyClients.css
+++ b/src/components/happyClients/HappyClients.css
@@ -29,6 +29,7 @@
 	font-size: 16px;
 	color: var(--color-text-title);
 	text-align: center;
+	height: 20px;
 	margin-top: 10px;
 }
 .description_rating{
