--- a/src/components/cartRight/CartRight.css
+++ b/src/components/cartRight/CartRight.css
@@ -7,6 +7,7 @@
 	background-color: var(--color-white);
 	width: 100%;
 	padding: 15px;
+	z-index: 100;
 	transition: 0.5s ease-in-out;
 }
 .btn_cart_send{
