--- a/src/components/modalSearch/ModalSearch.css
+++ b/src/components/modalSearch/ModalSearch.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	position: fixed;
 	height: 100%;
+	z-index: 100;
 	top: -1000px;
 	background-color: var(--color-white);
 	transition: 0.5s all;
