--- a/src/components/tableCart/TableCart.css
+++ b/src/components/tableCart/TableCart.css
@@ -22,7 +22,7 @@ table tr td {
 table tr.even,
 table tr.alt,
 table tr:nth-of-type(even) {
-	background: #f9f9f9;
+	background: var(--bg-row-table);
 }
 
 table > tbody > tr > td {
