--- a/src/components/itemProduct/ItemProduct.css
+++ b/src/components/itemProduct/ItemProduct.css
@@ -125,6 +125,31 @@
 	text-decoration: line-through;
 	text-decoration-thickness: 1.4px;
 }
+
+.icon_heart{
+	position: absolute;
+	right: 10px;
+	padding: 10px;
+	border-radius: 50%;
+	height: 30px;
+	width: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(255, 255, 255);
+	top: 200px;
+}
+.favorite_true{
+	background-color: var(--color-text-titles);
+}
+.icon_heart > i {
+	color: rgba(0, 0, 0, 0.789);
+	font-size: 20px;
+}
+.favorite_true > i{
+	color: white;
+
+}
 @media screen and (min-width:768px) {
 	.btn_add_car{
 		font-size: 16px;
