--- a/src/components/listProducts/ListProducts.css
+++ b/src/components/listProducts/ListProducts.css
@@ -7,7 +7,8 @@
 	margin: 0 auto;
 }
 .message_list_products{
-	font-size: 14px;
+	font-size: 16px;
+	margin-top: 10px;
 	color: var(--color-icon);
 }
 @media screen and (min-width:700px) {
