--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -186,6 +186,9 @@ i {
 	height: 1px;
 }
 
+/*
+	Tamaño pc
+*/
 
 @media screen and (min-width: 1024px) {
 	*{
@@ -214,7 +217,8 @@ i {
 		display: flex;
 		justify-content: space-between;
 		padding: 0px;
-		width: 58%;
+		/* width: 58%; */
+		gap: 60px;
 		/* border: var(--border); */
 	}
 
